# conduit-drf

./: .gitignore  README.md  manage.py  pyproject.toml
api/: models.py  serializers.py  urls.py  urls_backup.py  views.py
api/migrations/: 0001_initial.py  0002_alter_user_email.py  0002_remove_topic_favorote_topic_favorite.py  0003_alter_topic_tags.py  0003_alter_user_nickname.py  0004_alter_topic_tags.py  0004_comment_tag_topic_tag_api_tag_tag_268f1a_idx_and_more.py  0005_rename_favorite_user_favorites_alter_comment_topic.py  0006_remove_user_date_joined_remove_user_first_name_and_more.py
api/utils/: hook.py  pagination.py  permisson.py  view.py
conduit_drf/: asgi.py  settings.py  urls.py  wsgi.py
